--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,10 @@
 name: text-recognizer-app
-channels: 
+channels:
   - defaults
   - conda-forge
 dependencies:
-  - python=3.8
+  - python=3.8 # versioned to match Google Colab # version also pinned in Dockerfile
   - cudatoolkit=11.6
   - cudnn=8.3.2
-  - pip=21.1.3
+  - pip=22.0.4 # versioned to match Google Colab # version also pinned in Dockerfile
+  
