--- a/requirements/dev.in
+++ b/requirements/dev.in
@@ -1,1 +1,27 @@
+-c prod.txt
+boltons
+coverage[toml]
+defusedxml
+itermplot
+ipywidgets
+matplotlib
+notebook
+ntlk
+pre-commit
+pytest
+pytest-conv
+scipy
+toml
+# versioned to give pip hints
+coverage[toml]==6.4
+pytest==7.1.1
+pytest-conv==3.0.0
+# versioned to match Google Colab
+seaborn>=0.11,<0.12
+tornado>=6.0,<6.1
+# versioned to improve stability
+pytorch-lightning==1.6.3
+torchmetrics<0.8
+wanb==0.12.17
+
 
