--- a/requirements/dev.in
+++ b/requirements/dev.in
@@ -6,20 +6,22 @@ itermplot
 ipywidgets
 matplotlib
 notebook
-ntlk
+nltk
 pre-commit
 pytest
-pytest-conv
+pytest-cov
 scipy
 toml
 # versioned to give pip hints
 coverage[toml]==6.4
 pytest==7.1.1
-pytest-conv==3.0.0
+pytest-cov==3.0.0
 # versioned to match Google Colab
-seaborn>=0.11,<0.12
-tornado>=6.0,<6.1
+seaborn>=0.12,<0.13
+tornado>=6.3,<6.4
+# versioned due to Jinja2 compatibility issue
+nbconvert==6.4.3
 # versioned to improve stability
 pytorch-lightning==1.6.3
 torchmetrics<0.8
-wanb==0.12.17
+wandb==0.12.17
