--- a/requirements/dev.in
+++ b/requirements/dev.in
@@ -20,7 +20,7 @@ pytest-cov==3.0.0
 seaborn>=0.12,<0.13
 tornado>=6.3,<6.4
 # versioned due to Jinja2 compatibility issue
-nbconvert==6.4.3
+nbconvert
 # versioned to improve stability
 pytorch-lightning==1.6.3
 torchmetrics<0.8
