--- a/requirements/prod.in
+++ b/requirements/prod.in
@@ -14,4 +14,4 @@ pillow>=8.4,<8.5
 torch>=2.0,<2.1
 torchvision>=0.15,<0.16
 # versioned to avoid breaking change in minor version update
-markupsafe
+# markupsafe
